crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_ansi_preserved.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual_preserved
snapshot_kind: text
---
---
command: colorized output
exit_code: 0
---
<stdout>
[32mGreen line 1[0m
[31mRed line 2[0m
[1mBold line 3[0m
</stdout>
<stderr>
[33mYellow error 1[0m
[35mMagenta error 2[0m
</stderr>
