crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_both_streams.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual
snapshot_kind: text
---
---
command: complex command
exit_code: 0
---
<stdout>
stdout line 1
stdout line 2
stdout line 3
</stdout>
<stderr>
stderr line 1
stderr line 2
</stderr>
