crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_line_truncation.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&actual)"
snapshot_kind: text
---
---
command: generate many lines
exit_code: 0
total_stdout_chars: 450
total_stderr_chars: 450
temp_file: [TEMP_DIR]
truncated: true
---
<stdout chars="0-66">
This is line number 1
This is line number 2
This is line number 3

</stdout>
<truncated>...stdout truncated (316 characters not shown)...</truncated>
<stdout chars="382-450">
This is line number 18
This is line number 19
This is line number 20
</stdout>

<stderr chars="0-66">
This is line number 1
This is line number 2
This is line number 3

</stderr>
<truncated>...stderr truncated (316 characters not shown)...</truncated>
<stderr chars="382-450">
This is line number 18
This is line number 19
This is line number 20
</stderr>
<truncate>content is truncated, remaining content can be read from path:[TEMP_DIR]</truncate>
