crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_mixed_newlines.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual
snapshot_kind: text
---
---
command: mixed newlines
exit_code: 0
---
<stdout>
line1

line3


line6
</stdout>
<stderr>
error1
error2

</stderr>
