crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_only_newlines.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual
snapshot_kind: text
---
---
command: only newlines
exit_code: 0
---
Command executed successfully with no output.
