crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_stdout.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual
snapshot_kind: text
---
---
command: echo multiline
exit_code: 0
---
<stdout>
line1
line2
line3
line4
line5
</stdout>
