crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_small_truncation.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: small_result
snapshot_kind: text
---
---
command: echo
exit_code: 0
total_stdout_chars: 26
temp_file: /var/folders/v4/ww1bj4dn2ml3k1xrmfgx8sv80000gn/T/forge_shell_ziAYu9.md
truncated: true
---
<stdout chars="0-5">
ABCDE
</stdout>
<truncated>...stdout truncated (16 characters not shown)...</truncated>
<stdout chars="21-26">
VWXYZ
</stdout>
<truncate>content is truncated, remaining content can be read from path:/var/folders/v4/ww1bj4dn2ml3k1xrmfgx8sv80000gn/T/forge_shell_ziAYu9.md</truncate>
