crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_working_directory.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&result)"
---
---
command: pwd
exit_code: 0
---
<stdout>
/private/var/folders/99/v0n6z0gj5yj3j5vvsyfmvx100000gn/T

</stdout>
